--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "server"]
 	path = server
 	url = https://github.com/WollfieGitHub/cottus-arm-server
+[submodule "client"]
+	path = client
+	url = https://github.com/WollfieGitHub/cottus-arm-client
